src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__to_str.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
print(to_str(10000))
}

OK
Nil

STDOUT
"10000"
