src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__type_name.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
print(type_name(nil))
print(type_name(true))
print(type_name(1))
print(type_name(1.0))
print(type_name("test"))
print(type_name({}))
print(type_name([]))
fn f() {}
print(type_name(f))
print(type_name(fn(){}))
print(type_name(print))

OK
Nil

STDOUT
Nil
Bool
Int
Float
Str
Table
List
Function
Closure
HostFunction
