src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__type_name_closure.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
fn f() {}

print(type_name([]))
print(type_name(f))
}

OK
Nil

STDOUT
List
Closure
