src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__variable_shadowing.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let a = 0
let a = 1
a
}

OK
Int(1)
