src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__while_break.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let i = 0
while true {
  i = i + 1
  if i == 3 {
    break
  }
}
i
}

OK
Int(3)
