src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__while_comparison_operators.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let tests = 0

// Test <
let i = 0
while i < 3 {
  tests = tests + 1
  i = i + 1
}

// Test <=
let i = 0
while i <= 3 {
  tests = tests + 1
  i = i + 1
}

// Test >
let i = 5
while i > 2 {
  tests = tests + 1
  i = i - 1
}

// Test >=
let i = 5
while i >= 2 {
  tests = tests + 1
  i = i - 1
}

tests
}

OK
Int(14)
