src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__while_continue.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let sum = 0
let i = 0
while i < 10 {
  i = i + 1
  if i == 5 {
    continue
  }
  sum = sum + i
}
sum
}

OK
Int(50)
