src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__while_false.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let ran = false
while false {
  ran = true
}
ran
}

OK
Bool(false)
