src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__while_inside_loop.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let total = 0
let outer = 0
loop {
  let i = 0
  while i < 3 {
    total = total + 1
    i = i + 1
  }
  outer = outer + 1
  if outer >= 2 {
    break
  }
}
total
}

OK
Int(6)
