src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__while_nested.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let result = 0
let i = 0
while i < 3 {
  let j = 0
  while j < 2 {
    result = result + 1
    j = j + 1
  }
  i = i + 1
}
result
}

OK
Int(6)
